general/src/datascrubbing/snapshots/tests__should_have_mysql_pwd_as_a_default_1.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "MYSQL_PWD": "[filtered]"
  },
  "_meta": {
    "extra": {
      "MYSQL_PWD": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 7
        }
      }
    }
  }
}
