general/src/datascrubbing/snapshots/tests__stacktrace.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "stacktrace": {
    "frames": [
      {
        "vars": {
          "a_password_here": "[Filtered]",
          "apiKey": "[Filtered]",
          "api_key": "[Filtered]",
          "foo": "bar",
          "password": "[Filtered]",
          "the_secret": "[Filtered]"
        }
      }
    ]
  },
  "_meta": {
    "stacktrace": {
      "frames": {
        "0": {
          "vars": {
            "a_password_here": {
              "": {
                "rem": [
                  [
                    "@password:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 5
              }
            },
            "apiKey": {
              "": {
                "rem": [
                  [
                    "@password:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 10
              }
            },
            "api_key": {
              "": {
                "rem": [
                  [
                    "@password:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 10
              }
            },
            "password": {
              "": {
                "rem": [
                  [
                    "@password:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 5
              }
            },
            "the_secret": {
              "": {
                "rem": [
                  [
                    "@password:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 5
              }
            }
          }
        }
      }
    }
  }
}
