general/src/datascrubbing/snapshots/tests__user.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "user": {
    "username": "secret",
    "data": {
      "a_password_here": null,
      "apiKey": null,
      "api_key": null,
      "foo": "bar",
      "password": null,
      "the_secret": null
    }
  },
  "_meta": {
    "user": {
      "data": {
        "a_password_here": {
          "": {
            "rem": [
              [
                "@password",
                "x"
              ]
            ]
          }
        },
        "apiKey": {
          "": {
            "rem": [
              [
                "@password",
                "x"
              ]
            ]
          }
        },
        "api_key": {
          "": {
            "rem": [
              [
                "@password",
                "x"
              ]
            ]
          }
        },
        "password": {
          "": {
            "rem": [
              [
                "@password",
                "x"
              ]
            ]
          }
        },
        "the_secret": {
          "": {
            "rem": [
              [
                "@password",
                "x"
              ]
            ]
          }
        }
      }
    }
  }
}
